syntax = "proto3";

package dashboard;
option go_package = "github.com/995933447/mconfigcenter-dashboard/backend/api/dashboard";

import "easymicro_ext.proto";
import "mgorm_ext.proto";
import "httpext.proto";

option (easymicro_ext.proto_gen_opts) = {
  server_package: "github.com/995933447/mconfigcenter-dashboard/backend/service/dashboardserver"
};

enum ErrCode {
  ErrCodeNil = 0;
  ErrCodeRSAKeysGenerating = 30001 [(easymicro_ext.err_message) = {message: "rsa key正在生成中"}];
  ErrCodeUserNotFound = 30002 [(easymicro_ext.err_message) = {message: "用户不存在"}];
  ErrCodePasswordIncorrect = 30003 [(easymicro_ext.err_message) = {message: "密码不正确"}];
}

service Dashboard {
  rpc GetRSAPubKey(GetRSAPubKeyReq) returns (GetRSAPubKeyResp) {
    option(httpext.http_rule) = {
      method: "POST"
      no_auth: true,
    };
  };

  rpc Login(LoginReq) returns (LoginResp) {
    option(httpext.http_rule) = {
      method: "POST"
      no_auth: true,
    };
  };

  rpc GetUserInfo(GetUserInfoReq) returns (GetUserInfoResp) {
    option(httpext.http_rule) = {
      method: "GET"
    };
  }

  rpc DisabledRBAC(DisabledRBACReq) returns (DisabledRBACResp) {
    option(httpext.http_rule) = {
      method: "GET"
    };
  }

  rpc AuthUser(AuthUserReq) returns (AuthUserResp);

  rpc ChangeUserPassword(ChangeUserPasswordReq) returns (ChangeUserPasswordResp) {
    option(httpext.http_rule) = {
      method: "POST"
    };
  };

  rpc ListMenuConf(ListMenuConfReq) returns (ListMenuConfResp) {
    option(httpext.http_rule) = {
      method: "GET"
    };
  }

  rpc AddMenuConf(AddMenuConfReq) returns (AddMenuConfResp) {
    option(httpext.http_rule) = {
      method: "POST"
    };
  }

  rpc UpdateMenuConf(UpdateMenuConfReq) returns (UpdateMenuConfResp) {
    option(httpext.http_rule) = {
      method: "POST"
    };
  }

  rpc DeleteMenuConf(DeleteMenuConfReq) returns (DeleteMenuConfResp) {
    option (httpext.http_rule) = {
      method: "POST"
    };
  }

  rpc ListRoleConf(ListRoleConfReq) returns (ListRoleConfResp) {
    option (httpext.http_rule) = {
      method: "GET"
    };
  };

  rpc AddRoleConf(AddRoleConfReq) returns (AddRoleConfResp) {
    option (httpext.http_rule) = {
      method: "POST"
    };
  }

  rpc UpdateRoleConf(UpdateRoleConfReq) returns (UpdateRoleConfResp) {
    option (httpext.http_rule) = {
      method: "POST"
    };
  }

  rpc DeleteRoleConf(DeleteRoleConfReq) returns (DeleteRoleConfResp) {
    option (httpext.http_rule) = {
      method: "POST"
    };
  };

  rpc ListUser(ListUserReq) returns (ListUserResp) {
    option (httpext.http_rule) = {
      method: "GET"
    };
  };

  rpc AddUser(AddUserReq) returns (AddUserResp) {
    option (httpext.http_rule) = {
      method: "POST"
    };
  };

  rpc UpdateUser(UpdateUserReq) returns (UpdateUserResp) {
    option (httpext.http_rule) = {
      method: "POST"
    };
  }

  rpc DeleteUser(DeleteUserReq) returns (DeleteUserResp) {
    option (httpext.http_rule) = {
      method: "POST"
    };
  }

  rpc ListGeneralConf(ListGeneralConfReq) returns (ListGeneralConfResp) {
    option (httpext.http_rule) = {
      method: "GET"
    };
  }

  rpc ListConfSchema(ListConfSchemaReq) returns (ListConfSchemaResp) {
    option (httpext.http_rule) = {
      method: "GET"
    };
  }

  rpc SetConfigSchema(SetConfSchemaReq) returns (SetConfSchemaResp) {
    option (httpext.http_rule) = {
      method: "POST"
    };
  }

  rpc AddGeneralConf(AddGeneralConfReq) returns (AddGeneralConfResp) {
    option (httpext.http_rule) = {
      method: "POST"
    };
  }

  rpc UpdateGeneralConf(UpdateGeneralConfReq) returns (UpdateGeneralConfResp) {
    option (httpext.http_rule) = {
      method: "POST"
    };
  }

  rpc DeleteGeneralConf(DeleteGeneralConfReq) returns (DeleteGeneralConfResp) {
    option (httpext.http_rule) = {
      method: "POST"
    };
  }

  rpc ListUserPerm(ListUserPermReq) returns (ListUserPermResp) {
    option (httpext.http_rule) = {
      method: "POST"
    };
  }

  rpc SyncGeneralConfigsToApp(SyncGeneralConfigsToAppReq) returns (SyncGeneralConfigsToAppResp) {
    option (httpext.http_rule) = {
      method: "POST"
    };
  }
}

message SyncGeneralConfigsToAppReq {
  repeated string listener_groups = 1; // 需要通知的监听者组别,由配置发布方根据业务自定义,非必需
  repeated string coll_names = 2; // 集合名称
}

message SyncGeneralConfigsToAppResp {

}

message ListUserPermReq {

}

message ListUserPermResp {
  repeated uint64 perm_ids = 1;
}

message SetConfSchemaReq {
  ConfigSchema config_schema = 1;
}

message SetConfSchemaResp {

}

message ListConfSchemaReq {

}

message ConfigSchema {
  string coll_name = 1; // 集合名称
  repeated string index_keys = 2; // 普通索引键
  repeated string uniq_index_keys = 3; // 唯一索引键
  string json_schema = 4; // json schema
  string desc = 5;
}

message ListConfSchemaResp {
  repeated ConfigSchema list = 1;
}

message DeleteGeneralConfReq {
  repeated string ids = 1;
  string coll_name = 2;
}

message DeleteGeneralConfResp {

}

message UpdateGeneralConfReq {
  string coll_name = 1; // 配置集合的名称
  string value = 2; // 具体配置
  bool should_notify_listeners = 3; // 是否立刻通知配置监听者
  string listener_group = 4; // 需要通知的监听者组别,由配置发布方根据业务自定义,非必需
  string id = 5; // 配置id
}

message UpdateGeneralConfResp {

}

message AddGeneralConfReq {
  string coll_name = 1; // 配置集合的名称
  string value = 2; // 具体配置
  bool should_notify_listeners = 3; // 是否立刻通知配置监听者
  string listener_group = 4; // 需要通知的监听者组别,由配置发布方根据业务自定义,非必需
}

message AddGeneralConfResp {

}

message ListGeneralConfReq {
  message Sort {
    string field = 1; // 排序字段
    int32 sort_way = 2; // 排序方式，1升序或者-1降序
  }

  string coll_name = 1; // 集合名称
  repeated Sort sorts = 2; // 排序
  string filter = 3; // 过滤
  Page page = 4; // 分页
}

message ListGeneralConfResp {
  repeated string list = 1; // 列表
  uint32 total = 2; // 总条数
}

message DeleteUserReq {
  uint64 user_id = 1;
}

message DeleteUserResp {

}

message UpdateUserReq {
  string name = 1;
  uint32 status = 3;
  repeated uint64 role_ids = 4;
  string password = 5;
  uint64 user_id = 7;
}

message UpdateUserResp {

}

message AddUserReq {
  string name = 1;
  uint32 status = 3;
  repeated uint64 role_ids = 4;
  string password = 5;
}

message AddUserResp {

}

message ListUserReq {
  string name = 1;
  uint64 user_id = 2;
  uint32 status = 3;
  uint64 role_id = 4;
  Page page = 5;
}

message ListUserResp {
  message Item {
    User user = 1;
    repeated Role roles = 3;
  }

  repeated Item list = 1;
  uint32 total = 2;
}

message DeleteRoleConfReq {
  uint64 role_id = 1;
}

message DeleteRoleConfResp {

}

message AddRoleConfReq {
  string name = 1;
  int32 status = 2;
  bool is_super_admin = 3;
  repeated uint64 perm_ids = 4;
}

message AddRoleConfResp {

}

message UpdateRoleConfReq {
  uint64 role_id = 1;
  string name = 2;
  int32 status = 3;
  bool is_super_admin = 4;
  repeated uint64 perm_ids = 5;
}

message UpdateRoleConfResp {

}

message ListRoleConfReq {
  string name = 1;
  int32 status = 2;
  bool only_super_admin = 3;
  bool without_super_admin = 4;
  Page page = 5;
}

message ListRoleConfResp {
  repeated Role list = 1;
  uint32 total = 2;
}

message Role {
  uint64 role_id = 1; // 角色id
  string name = 2; // 角色名称
  int32 status = 3; // 状态，参考enum RoleStatus
  repeated uint64 perm_ids = 4; // 权限id
  string remark = 5; // 备注
  bool is_super_admin = 6; // 是否超级管理员
}

message DeleteMenuConfReq {
  uint64 perm_id = 1;
}

message DeleteMenuConfResp {

}

message UpdateMenuConfReq {
  string name = 2; // 权限名称
  string path = 3;
  repeated string services = 4;
  uint64 pid = 5;
  uint64 perm_id = 6;
  int32 path_type = 7;
}

message UpdateMenuConfResp {

}

message AddMenuConfReq {
  string name = 2; // 权限名称
  string path = 3;
  repeated string services = 4;
  uint64 pid = 5;
  int32 path_type = 6;
}

message AddMenuConfResp {

}

message ListMenuConfReq {

}

message ListMenuConfResp {
  message MenuConf {
    uint64 perm_id = 1; // 权限id
    string name = 2; // 权限名称
    string path = 3;
    repeated string services = 4;
    uint64 pid = 5;
    int32 path_type = 6;
  }

  repeated MenuConf list = 1;
  uint32 total = 2;
}

message ChangeUserPasswordReq {
  string new_password = 1;
}

message ChangeUserPasswordResp {

}

message AuthUserReq {
  string token = 1;
}

message AuthUserResp {
  uint64 user_id = 1;
}

message DisabledRBACReq {

}

message DisabledRBACResp {
  bool disabled = 1;
}

message GetUserInfoReq {
}

message GetUserInfoResp {
  uint64 user_id = 1;
  string username = 2;
  repeated string role_names = 3;
  int64 last_login_at = 4;
}

message GetRSAPubKeyReq {

}

message GetRSAPubKeyResp {
  string key = 1;
}

message LoginReq {
  string username = 1;
  string password = 2;
}

message LoginResp {
  string token = 1;
  int64 expire_at = 2;
}

enum UserStatus {
  UserStatusNil = 0;
  UserStatusNormal = 1; // 正常状态
  UserStatusFrozen = 2; // 冻结状态
}

message User {
  option (mgorm_ext.mgorm_opts) = {
    conn: "default",
    db: "mconfigcenter_dashboard",
    tb: "user",
    cached: true,
    uniq_index_keys:["username", "user_id"],
  };
  string username = 1;
  string password = 2;
  uint32 status = 3;
  uint64 user_id = 4;
  int64 last_login_at = 5;
  repeated uint64 role_ids = 6;
}

message Page {
  uint32 page_size = 1;
  uint32 page = 2;
}

message ListenerGroup {
  option (mgorm_ext.mgorm_opts) = {
    conn: "default",
    db: "mconfigcenter_dashboard",
    tb: "listener_group",
    cached: true,
    uniq_index_keys:["name"],
    desc: "配置订阅分组"
  };
  string name = 1 [(mgorm_ext.mgorm_field_opts)={tags:'bson:"name" json:"name" jsonschema:"title=名称"'}];
  string desc = 2 [(mgorm_ext.mgorm_field_opts)={tags:'bson:"desc" json:"desc" jsonschema:"title=描述"'}];
}